--- a/FoodbLog/FoodbLog/Base.lproj/Main.storyboard
+++ b/FoodbLog/FoodbLog/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fDy-ci-PHG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -16,7 +16,7 @@
                         <viewControllerLayoutGuide type="bottom" id="feP-jq-AZk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="C4Z-ip-jVV">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OEl-OE-ZPR">
@@ -111,7 +111,7 @@
         <!--Food Logs Collection VC-->
         <scene sceneID="Won-OC-9GV">
             <objects>
-                <collectionViewController id="Ej6-zJ-2Ib" userLabel="Food Logs Collection VC" customClass="FoodbLogCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FoodbLogCollectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ej6-zJ-2Ib" userLabel="Food Logs Collection VC" customClass="FoodbLogCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="pCR-CD-WKv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -172,7 +172,7 @@
         <!--Food Feed View Controller-->
         <scene sceneID="QnS-3A-tqX">
             <objects>
-                <viewController id="VEN-Oo-enf" customClass="FoodFeedViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FoodFeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VEN-Oo-enf" customClass="FoodFeedViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ocg-qp-ihy"/>
                         <viewControllerLayoutGuide type="bottom" id="qfF-ae-hXI"/>
@@ -192,7 +192,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FoodFeedCustomCVC" id="C0x-uH-KmF" customClass="FoodFeedCustomCVC">
-                                        <rect key="frame" x="20" y="34" width="280" height="380"/>
+                                        <rect key="frame" x="20" y="53.666666666666664" width="280" height="380"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="280" height="380"/>
@@ -291,7 +291,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="5hq-Gs-njV">
                         <nil key="title"/>
-                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="bOv-dC-dMf">
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="bOv-dC-dMf">
                             <rect key="frame" x="16" y="5" width="361" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -387,7 +387,7 @@
             <objects>
                 <navigationController id="JIG-jI-mLI" userLabel="Navigation Controller for CreateLog VC" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Riy-Yd-A5t">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -407,7 +407,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Yfc-yA-9O0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zCx-ga-EMq">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search For Restaurant" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="j5v-l0-noz">
@@ -712,69 +712,10 @@
             </objects>
             <point key="canvasLocation" x="3181" y="-132"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="eQF-a3-zvi">
-            <objects>
-                <tabBarController id="fDy-ci-PHG" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="waB-Jj-Vce">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="tintColor" red="1" green="0.65156431479999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="gS1-7B-Vab" kind="relationship" relationship="viewControllers" id="eIO-nQ-oSj"/>
-                        <segue destination="9Fv-Ue-ehK" kind="relationship" relationship="viewControllers" id="lFD-q1-oJt"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5E-Ao-ZTn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1526" y="-276"/>
-        </scene>
-        <!--NavController for Food Blog ColVC-->
-        <scene sceneID="W2f-5x-Url">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gS1-7B-Vab" userLabel="NavController for Food Blog ColVC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Food bLOG" image="Literature Filled-25" id="0cq-Iv-nhg"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Prc-zH-yCb">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Ej6-zJ-2Ib" kind="relationship" relationship="rootViewController" id="AAW-0S-h4q"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NPL-yW-L3w" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-651" y="-637"/>
-        </scene>
-        <!--NavController for Food Feed VC-->
-        <scene sceneID="G51-hF-yYN">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9Fv-Ue-ehK" userLabel="NavController for Food Feed VC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Food Feed" image="Food Filled-25" id="NgG-CQ-VXD"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hAN-nb-hhQ">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="VEN-Oo-enf" kind="relationship" relationship="rootViewController" id="QHe-ie-l6S"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="okQ-9S-59P" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-651" y="54"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="Food Filled-25" width="25" height="25"/>
         <image name="Fork-32" width="32" height="32"/>
         <image name="Instagram" width="32" height="32"/>
-        <image name="Literature Filled-25" width="25" height="25"/>
         <image name="cameraIcon" width="32" height="32"/>
         <image name="plate" width="1400" height="980"/>
     </resources>
